# collaborative

./: CMakeLists.txt  README.md  actor.param  baseModel.h  compareMA.pro  main.cpp  trainer.cpp
